fixed avatar alignment

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -26,11 +26,6 @@
   text-align: justify;
 }
 
-.about-photo {
-  width: 40%;
-  right: 0;
-}
-
 .subtitle {
   color: #ababab;
 }
